--- a/posts.html
+++ b/posts.html
@@ -3,8 +3,26 @@ layout: default
 title: Posts - Jacob Wejendorp
 ---
 
-<ul class="posts">
-  {% for post in site.posts %}
+<h1>Posts</h1>
+
+{% for post in site.posts  %}
+    {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
+    {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
+
+    {% if forloop.first %}
+    <h2 id="{{ this_year }}-ref">{{this_year}}</h2>
+    <ul class="posts">
+    {% endif %}
+
     <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-  {% endfor %}
-</ul>
+
+    {% if forloop.last %}
+    </ul>
+    {% else %}
+        {% if this_year != next_year %}
+        </ul>
+        <h2 id="{{ next_year }}-ref">{{next_year}}</h2>
+        <ul class="posts">
+        {% endif %}
+    {% endif %}
+{% endfor %}
