--- a/index.html
+++ b/index.html
@@ -7,20 +7,38 @@ title: Jacob Wejendorp
   <div class="card clearfix">
     <img src="https://secure.gravatar.com/avatar/7a41557b7c7541efe54d8e698f85643c?s=120" class="profile"/>
     <div class="content">
-      <h1>Who?</h1>
-      <p>Hi, I'm Jacob, I create web applications.</p>
-      <p>I currently work at <a href="http://mojn.com">Mojn</a>, where I
-      do a mix of frontend and backend development. I also try to contribute actively to the
-      <a href="https://github.com/wejendorp">open source community</a>. I've published a few
-      packages on <a href="https://www.npmjs.org/~wejendorp">npm</a> and
+      <h1>Hi, I'm Jacob,</h1>
+      <p>I currently work at <a href="http://mojn.com">Mojn</a>, an email retargeting company in
+      Copenhagen, doing a mix of frontend and backend development.
+      I also try to contribute actively to <a href="https://github.com/wejendorp">Open Source</a>.<br />
+
+      I've published a few packages on <a href="https://www.npmjs.org/~wejendorp">npm</a> and
       <a href="http://bower.io/search/?q=owner:wejendorp">bower</a>.</p>
+
+      <div class="bullets">
+        <a href="https://www.npmjs.org/~wejendorp">NodeJS</a><span>•</span>
+        <a href="https://github.com/wejendorp">Open Source</a><span>•</span>
+        <a href="https://github.com/search?l=JavaScript&q=%40wejendorp+&ref=searchresults&type=Repositories">Javascript</a>
+      </div>
     </div>
   </div>
+  <div class="bullets center">
+    <a href="https://linkedin.com/in/jacobwejendorp">LinkedIn</a><span>•</span>
+    <a href="https://github.com/wejendorp">Github</a><span>•</span>
+    <a href="https://twitter.com/wejendorp">Twitter</a>
+  </div>
 
-  <h1>Blog Posts</h1>
+  <h2>Recent Posts</h2>
   <ul class="posts">
     {% for post in site.posts limit:5 %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li>
+        <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+        <p class="meta">{{ post.date | date_to_string }}</p>
+        {{post.excerpt}}
+        {% if post.content != post.excerpt %}
+        <p><a href="{{ post.url }}">Read more...</a></p>
+        {% endif %}
+      </li>
     {% endfor %}
   </ul>
 </div>
