--- a/index.html
+++ b/index.html
@@ -16,16 +16,12 @@ title: Jacob Wejendorp
       <a href="http://bower.io/search/?q=owner:wejendorp">bower</a>.</p>
 
       <div class="bullets">
-        <a href="https://www.npmjs.org/~wejendorp">NodeJS</a><span>•</span>
-        <a href="https://github.com/wejendorp">Open Source</a><span>•</span>
-        <a href="https://github.com/search?l=JavaScript&q=%40wejendorp+&ref=searchresults&type=Repositories">Javascript</a>
+        <a href="https://www.npmjs.org/~wejendorp">NodeJS</a><span>•</span><a href="https://github.com/wejendorp">Open Source</a><span>•</span><a href="https://github.com/search?l=JavaScript&q=%40wejendorp+&ref=searchresults&type=Repositories">Javascript</a>
       </div>
     </div>
   </div>
   <div class="bullets center">
-    <a href="https://linkedin.com/in/jacobwejendorp">LinkedIn</a><span>•</span>
-    <a href="https://github.com/wejendorp">Github</a><span>•</span>
-    <a href="https://twitter.com/wejendorp">Twitter</a>
+<a href="https://linkedin.com/in/jacobwejendorp">LinkedIn</a><span>•</span><a href="https://github.com/wejendorp">Github</a><span>•</span><a href="https://twitter.com/wejendorp">Twitter</a>
   </div>
 
   <h2>Recent Posts</h2>
@@ -33,7 +29,7 @@ title: Jacob Wejendorp
     {% for post in site.posts limit:5 %}
       <li>
         <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-        <p class="meta">{{ post.date | date_to_string }}</p>
+        <p class="meta">{{ post.date | date: '%b %d %Y' }}</p>
         {{post.excerpt}}
         {% if post.content != post.excerpt %}
         <p><a href="{{ post.url }}">Read more...</a></p>
