--- a/posts.html
+++ b/posts.html
@@ -3,8 +3,6 @@ layout: default
 title: Posts - Jacob Wejendorp
 ---
 
-<h1>Posts</h1>
-
 {% for post in site.posts  %}
     {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
     {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
@@ -14,7 +12,8 @@ title: Posts - Jacob Wejendorp
     <ul class="posts">
     {% endif %}
 
-    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    <li><h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+        <p class="meta">{{ post.date | date_to_string }}</p></li>
 
     {% if forloop.last %}
     </ul>
