--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ subtitle: ""
 <img src="https://secure.gravatar.com/avatar/7a41557b7c7541efe54d8e698f85643c?s=120" class="gravatar vsp" />
 
 <p>
-I'm Jacob Wejendorp. I live in Copenhagen, Denmark, with my computers and my bicycles.
+I'm Jacob Wejendorp, but some call me <em>dorp</em>. I live in Copenhagen, Denmark, with my computers and my bicycles.<br />
 I was trained in the art of keyboard mashing at University of Copenhagen.
 </p>
 
@@ -19,6 +19,9 @@ a variety of technologies and tools needed to run things in "the cloud".
 	<li>In 2013 I joined a small consumer startup, and got started with the Node ecosystem.</li>
 	<li>In late 2013 I joined a team of more experienced developers at <a href="http://liveintent.com" title="Mojn (Acquired by LiveIntent)">Mojn</a>, and started getting a taste for automation and the power of "the cloud".</li>
 	<li>In 2014 I joined Pipetop, and got to build a company aggregation and exploration platform from scratch, with all the aches of growing an ever-changing product and infrastructure.</li>
-	<li>In 2016 I moved to Tradeshift, to get a feeling for working in a bigger company, and learn from awesome people.</li>
+	<li>In 2016 I moved to Tradeshift, to get a feeling for working in a bigger company, and learn from awesome people. Now I get to build things for other developers!</li>
 </ul>
 
+<p>
+Currently occupied with frontend developer tools and, more importantly, improving user <em>and</em> developer experience.
+</p>
