--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Thoughts on were had
     	{% include post_list_item.html post=post %}
     {% endfor %}
   </div>
-  <p class="center"><a href="/blog/">more ➟</a></p>
+  <p class="center"><a href="/posts/">more ➟</a></p>
 {% else %}
   <p>No posts found.</p>
 {% endif %}
