--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
 layout: default
-title: Thoughts on were had
+title: Thoughts were had
 ---
-
-{% include vcard.html %}
 
 {% if site.posts.size > 0 %}
   <div class="list-group">
